--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,9 @@ jobs:
         
     - name: Npm Install
       run: npm install
+    
+    - name: Add safe directory
+      run: git config --global --add safe.directory /github/workspace
 
     - name: Publish if version has been updated
       uses: pascalgn/npm-publish-action@1.3.4
